[package]
name = "grimsby"
version = "0.1.0"
edition = "2021"
authors = ["Peter Morgan <peter.james.morgan@gmail.com>"]
homepage = "https://github.com/shortishly/grimsby"
repository = "https://github.com/shortishly/grimsby"
license = "Apache-2.0"
keywords = ["erlang", "port_driver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
ordered-float = { version = "4.2.0", default-features = false }
